--- a/projects/api/package.json
+++ b/projects/api/package.json
@@ -8,16 +8,14 @@
         "lint:fix": "npm run lint -- --fix",
         "start": "node dist/index.js",
         "test": "jest --silent --passWithNoTests",
-        "watch": "concurrently -n ts,node \"npm run watch:ts\" \"npm run watch:node\"",
-        "watch:node": "nodemon --watch dist dist/index.js",
-        "watch:test": "npm run test -- --watchAll",
-        "watch:ts": "tsc -w --preserveWatchOutput"
+        "watch": "nodemon --watch 'src/**/*.ts' --ignore 'src/**/*.spec.ts' --exec 'ts-node' src/index.ts",
+        "watch:test": "npm run test -- --watchAll"
     },
     "dependencies": {
         "@sendgrid/mail": "^7.1.1",
         "axios": "^0.19.2",
         "axios-cookiejar-support": "^1.0.0",
-        "bcrypt": "^4.0.1",
+        "bcrypt": "^5.0.0",
         "compression": "^1.7.4",
         "connect-mongo": "^3.2.0",
         "cors": "^2.8.5",
@@ -30,7 +28,7 @@
         "morgan": "^1.10.0",
         "passport": "^0.4.1",
         "passport-local": "^1.0.0",
-        "registrum-common": "^0.1.0",
+        "registrum-common": "workspace:^0.1.0",
         "tough-cookie": "^4.0.0",
         "web-push": "^3.4.4"
     },
@@ -56,17 +54,13 @@
         "@typescript-eslint/parser": "^3.5.0",
         "chai": "^4.2.0",
         "codecov": "^3.7.0",
-        "concurrently": "^5.2.0",
-        "eslint": "^7.0.0",
-        "eslint-config-prettier": "^6.11.0",
-        "eslint-plugin-prettier": "^3.1.4",
+        "eslint": "^7.5.0",
         "mongodb-memory-server": "^6.6.0",
         "nodemon": "^2.0.4",
-        "prettier": "^2.0.5",
         "supertest": "^4.0.2",
         "ts-jest": "^26.0.0",
         "ts-node": "^8.10.1",
         "tslib": "^2.0.0",
-        "typescript": "^3.9.6"
+        "typescript": "^3.9.7"
     }
 }
