tsc configs, dependabot

--- a/.eslintrc
+++ b/.eslintrc
@@ -4,7 +4,10 @@
     "ecmaVersion": 2020,
     "sourceType": "module"
   },
-  "extends": ["plugin:@typescript-eslint/recommended", "plugin:react/recommended"],
+  "extends": [
+    "plugin:@typescript-eslint/recommended",
+    "plugin:react/recommended"
+  ],
   "settings": {
     "react": {
       "pragma": "React",
