--- a/projects/client/tsconfig.json
+++ b/projects/client/tsconfig.json
@@ -1,20 +1,1 @@
-{
-  "compilerOptions": {
-    "target": "esnext",
-    "lib": ["WebWorker", "dom", "dom.iterable", "esnext"],
-    "module": "CommonJS",
-    "allowJs": true,
-    "skipLibCheck": true,
-    "allowSyntheticDefaultImports": true,
-    "strict": true,
-    "forceConsistentCasingInFileNames": true,
-    "moduleResolution": "node",
-    "esModuleInterop": true,
-    "resolveJsonModule": true,
-    "isolatedModules": true,
-    "noEmit": true,
-    "jsx": "react"
-  },
-  "baseUrl": "src",
-  "include": ["src"]
-}
+../../tsconfig.client.json
