--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,4 @@
-name: Docker CI/CD
+name: CI/CD
 
 on:
   push:
@@ -6,16 +6,9 @@ on:
   release:
   pull_request:
   workflow_dispatch:
-    inputs:
-      tag:
-        description: 'Docker image tag'
-        required: false
-      webhook:
-        description: 'WebHook to trigger'
-        required: false
 
 jobs:
-  build-test-rush:
+  build-test-node:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
@@ -23,35 +16,28 @@ jobs:
         uses: actions/setup-node@v1
         with:
           node-version: 12.x
-      - name: Get pnpm cache directory
-        id: pnpm-cache
-        run: |
-          echo "::set-output name=dir::common/temp/pnpm-store"
-      - uses: actions/cache@v2
+      - name: Restore Package Cache
+        uses: actions/cache@v2
         with:
-          path: common/temp/pnpm-store
-          key: ${{ runner.os }}-node-${{ hashFiles('common/config/rush/pnpm-lock.yaml') }}
-          restore-keys: |
-            ${{ runner.os }}-node-
-      - name: rush install
-        run: node common/scripts/install-run-rush.js install --no-link
-      - name: rush link
-        run: node common/scripts/install-run-rush.js link
-      - name: rush lint
-        run: node common/scripts/install-run-rush.js lint
-      - name: rush build
-        run: node common/scripts/install-run-rush.js build --verbose
-      - name: rush test
-        run: node common/scripts/install-run-rush.js test
-      - name: rush coverage
-        run: node common/scripts/install-run-rush.js coverage
-        env:
-          CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
+          path: |
+            node_modules
+            */*/node_modules
+          key: ${{ runner.os }}-${{ hashFiles('**/yarn.lock') }}
+      - name: Install yarn
+        run: npm i -g yarn
+      - name: Install dependencies
+        run: yarn
+      - name: Build projects
+        run: yarn build
+      - name: Run tests
+        run: yarn test
+      - name: Publish coverage
+        run: yarn coverage
 
   build-push-docker:
     runs-on: ubuntu-latest
     needs:
-      - build-test-rush
+      - build-test-node
     strategy:
       fail-fast: false
       matrix:
@@ -60,7 +46,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - uses: satackey/action-docker-layer-caching@v0.0.3
-      - name: build-image
+      - name: Build and push Docker images
         uses: docker/build-push-action@v1
         with:
           username: ${{ secrets.REGISTRY_USER }}
