--- a/projects/client/package.json
+++ b/projects/client/package.json
@@ -33,8 +33,7 @@
     "workbox-expiration": "^5.1.3",
     "workbox-precaching": "^5.1.3",
     "workbox-routing": "^5.1.3",
-    "workbox-strategies": "^5.1.3",
-    "workbox-sw": "^5.1.3"
+    "workbox-strategies": "^5.1.3"
   },
   "devDependencies": {
     "@babel/cli": "^7.10.4",
