--- a/tsconfig.client.json
+++ b/tsconfig.client.json
@@ -7,7 +7,7 @@
       "dom.iterable",
       "esnext"
     ],
-    "module": "esnext",
+    "module": "commonjs",
     "allowJs": true,
     "skipLibCheck": true,
     "allowSyntheticDefaultImports": true,
