--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,49 +1,33 @@
 {
-  "editor.rulers": [100],
-  "eslint.validate": ["javascript", "typescript", "typescriptreact"],
+  "editor.insertSpaces": true,
+  "editor.tabSize": 2,
+  "editor.trimAutoWhitespace": true,
+  "files.insertFinalNewline": true,
+  "html.format.enable": true,
+  "editor.formatOnSave": true,
+  "editor.formatOnPaste": true,
+  "editor.renderWhitespace": "boundary",
+  "editor.detectIndentation": true,
+  "editor.rulers": [
+    100
+  ],
+  "eslint.validate": [
+    "javascript",
+    "typescript",
+    "typescriptreact"
+  ],
   "files.trimTrailingWhitespace": true,
   "search.exclude": {
     "**/node_modules": true,
-    "**/bower_components": true,
     "**/dist": true,
     "**/coverage": true
   },
   "typescript.referencesCodeLens.enabled": true,
   "eslint.alwaysShowStatus": true,
-  "eslint.workingDirectories": [
-    "projects/api",
-    "projects/client",
-    "projects/banner",
-    "projects/banner-data",
-    "projects/common"
-  ],
   "editor.codeActionsOnSave": {
-    "source.fixAll.eslint": true
-  },
-  "[markdown]": {
-    "editor.defaultFormatter": "yzhang.markdown-all-in-one",
-    "editor.formatOnSave": false
-  },
-  "[yaml]": {
-    "editor.defaultFormatter": "redhat.vscode-yaml"
-  },
-  "[typescriptreact]": {
-    "editor.defaultFormatter": "vscode.typescript-language-features",
-    "editor.formatOnSave": false
-  },
-  "[typescript]": {
-    "editor.defaultFormatter": "vscode.typescript-language-features",
-    "editor.formatOnSave": false
-  },
-  "[json]": {
-    "editor.defaultFormatter": "vscode.json-language-features"
-  },
-  "[jsonc]": {
-    "editor.defaultFormatter": "vscode.json-language-features"
-  },
-  "[javascript]": {
-    "editor.defaultFormatter": "vscode.typescript-language-features",
-    "editor.formatOnSave": false
+    "source.organizeImports": true,
+    "source.fixAll": true,
+    "source.fixAll.eslint": false
   },
   "files.associations": {
     "*.json": "jsonc"
