add codecov script to package

--- a/lerna.json
+++ b/lerna.json
@@ -1,5 +1,7 @@
 {
-  "packages": ["projects/*"],
+  "packages": [
+    "projects/*"
+  ],
   "npmClient": "yarn",
   "useWorkspaces": true,
   "version": "independent"
