--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -42,6 +42,8 @@ jobs:
         project: [api, banner, banner-data, client]
     steps:
       - uses: actions/checkout@v2
+      - name: Set up Docker Buildx
+        uses: crazy-max/ghaction-docker-buildx@v3
       - name: Pull base images
         run: |
           docker pull node:12-alpine
