--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -42,54 +42,22 @@ jobs:
         project: [api, banner, banner-data, client]
     steps:
       - uses: actions/checkout@v2
-      - name: Set up Docker Buildx
-        uses: crazy-max/ghaction-docker-buildx@v3
       - name: Pull base images
         run: |
           docker pull node:12-alpine
           docker pull nginx:alpine
-      - name: Docker Login
-        if: startsWith(github.ref, 'refs/tags/') || github.ref == 'refs/heads/master'
-        env:
-          REGISTRY_USERNAME: ${{ secrets.REGISTRY_USERNAME }}
-          REGISTRY_PASSWORD: ${{ secrets.REGISTRY_PASSWORD }}
-          REGISTRY_HOST: ${{ secrets.REGISTRY_HOST }}
-        run: |
-          echo "${REGISTRY_PASSWORD}" | docker login ${REGISTRY_HOST} --username "${REGISTRY_USERNAME}" --password-stdin
-      - name: Cache Docker layers
-        uses: actions/cache@v2
-        id: cache
+      - uses: satackey/action-docker-layer-caching@v0.0.4
+      - name: Build and push Docker images
+        uses: docker/build-push-action@v1
         with:
-          path: /tmp/.buildx-cache
-          key: ${{ runner.os }}-buildx-${{ matrix.project }}-${{ github.sha }}
-          restore-keys: |
-            ${{ runner.os }}-buildx
-      - name: Docker Buildx
-        env:
-          REGISTRY_HOST: ${{ secrets.REGISTRY_HOST }}
-        run: |
-          PUSH=false
-          VERSION=temp
-          DOCKER_IMAGE=${REGISTRY_HOST}/${{ github.repository }}-${{ matrix.project }}
-          if [[ $GITHUB_REF == refs/tags/v* ]]; then
-            VERSION=${GITHUB_REF#refs/tags/v}
-            PUSH=true
-          fi
-          if [[ $GITHUB_REF == refs/heads/master ]]; then
-            VERSION=master
-            PUSH=true
-          fi
-          TAGS="--tag ${DOCKER_IMAGE}:${VERSION}"
-          if [[ $VERSION =~ ^[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}$ ]]; then
-            TAGS="$TAGS --tag ${DOCKER_IMAGE}:latest"
-          fi
-          docker buildx build \
-            --cache-from "type=local,src=/tmp/.buildx-cache" \
-            --cache-to "type=local,dest=/tmp/.buildx-cache" \
-            --output "type=image,push=${PUSH}" \
-            --platform linux/amd64 \
-            --target ${{ matrix.project }} \
-            ${TAGS} .
+          username: ${{ secrets.REGISTRY_USER }}
+          password: ${{ secrets.REGISTRY_PASSWORD }}
+          registry: ${{ secrets.REGISTRY_HOST }}
+          repository: ${{ github.repository }}/${{ matrix.project }}
+          build_args: CLIENT_WEBPUSHPUBLIC=${{ secrets.WEBPUSHPUBLIC }}
+          add_git_labels: true
+          tag_with_ref: true
+          push: ${{ (startsWith(github.ref, 'refs/tags/') || (github.ref == 'refs/heads/master') || (github.ref == 'refs/heads/staging')) }}
 
   trigger-hooks:
     runs-on: ubuntu-latest
