🚚 chore/Move File and update locations

--- a/projects/client/tsconfig.json
+++ b/projects/client/tsconfig.json
@@ -20,9 +20,9 @@
         "noEmit": true,
         "jsx": "react",
         "typeRoots": [
-            "./src/interfaces/assets.d.ts",
+            "src/images/index.d.ts",
             "./node_modules/@types"
-        ],
+        ]
     },
     "baseUrl": "src",
     "include": [
