--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -36,6 +36,8 @@ jobs:
 
   build-push-docker:
     runs-on: ubuntu-latest
+    needs:
+      - build-test-node
     strategy:
       fail-fast: false
       matrix:
@@ -55,6 +57,8 @@ jobs:
           registry: ${{ secrets.REGISTRY_HOST }}
           repository: ${{ github.repository }}/${{ matrix.project }}
           build_args: CLIENT_WEBPUSHPUBLIC=${{ secrets.WEBPUSHPUBLIC }}
+          path: .
+          dockerfile: docker/${{ matrix.project }}.Dockerfile
           add_git_labels: true
           tag_with_ref: true
           target: ${{ matrix.project }}
