--- a/lerna.json
+++ b/lerna.json
@@ -1,7 +1,5 @@
 {
-  "packages": [
-    "projects/*"
-  ],
+  "packages": ["projects/*"],
   "npmClient": "yarn",
   "useWorkspaces": true,
   "version": "independent"
