--- a/docker/nginx.conf
+++ b/docker/nginx.conf
@@ -4,13 +4,10 @@ server {
     include         /etc/nginx/mime.types;
 
     location / {
-        root        /usr/share/nginx/html;
-        index       index.html;
-        try_files   $uri /index.html;
+        proxy_pass  http://client:80;
     }
 
     location /api {
         proxy_pass  http://api:4000;
     }
-
 }
