--- a/.github/workflows/automerge.yml
+++ b/.github/workflows/automerge.yml
@@ -1,25 +1,27 @@
-name: automerge on pull request
-on: [pull_request]
+name: automerge
+
+on:
+  check_suite:
+    types:
+      - completed
+  pull_request:
+    types:
+      - edited
+      - labeled
+      - opened
+      - ready_for_review
+      - reopened
+      - synchronize
+      - unlabeled
+      - unlocked
 
 jobs:
-  automerge:
-    name: automerge dependabot
+  merge-me:
+    name: automerge
     runs-on: ubuntu-latest
     if: github.actor == 'dependabot[bot]'
     steps:
-      - name: merge
-        uses: actions/github-script@0.2.0
+      - name: Merge me!
+        uses: ridedott/merge-me-action@master
         with:
-          script: |
-            github.pullRequests.createReview({
-              owner: context.payload.repository.owner.login,
-              repo: context.payload.repository.name,
-              pull_number: context.payload.pull_request.number,
-              event: 'APPROVE'
-            })
-            github.pullRequests.merge({
-              owner: context.payload.repository.owner.login,
-              repo: context.payload.repository.name,
-              pull_number: context.payload.pull_request.number
-            })
-          github-token: ${{github.token}}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
