--- a/.github/workflows/automerge.yml
+++ b/.github/workflows/automerge.yml
@@ -23,4 +23,5 @@ jobs:
       - name: Merge me!
         uses: ridedott/merge-me-action@master
         with:
+          GITHUB_LOGIN: dependabot[bot]
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
