update deployment config

--- a/docker/nginx.conf
+++ b/docker/nginx.conf
@@ -4,7 +4,9 @@ server {
     include         /etc/nginx/mime.types;
 
     location / {
-        proxy_pass  http://client:80;
+        root        /usr/share/nginx/html;
+        index       index.html;
+        try_files   $uri /index.html;
     }
 
     location /api {
