--- a/projects/client/.eslintrc
+++ b/projects/client/.eslintrc
@@ -18,6 +18,7 @@
     "rules": {
       "no-unused-vars": "off",
       "no-trailing-spaces": "warn",
+      "react/display-name": "off",
       "@typescript-eslint/explicit-function-return-type": "off",
       "@typescript-eslint/no-explicit-any": 1,
       "@typescript-eslint/no-inferrable-types": [
