--- a/projects/common/package.json
+++ b/projects/common/package.json
@@ -1,43 +1,45 @@
 {
-    "name": "registrum-common",
-    "version": "0.1.0",
-    "private": true,
-    "main": "dist/index.js",
-    "scripts": {
-        "build": "tsc",
-        "lint": "eslint \"**/*.{js,ts}\"",
-        "lint:fix": "npm run lint -- --fix",
-        "start": "exit 0",
-        "test": "jest --silent --passWithNoTests",
-        "watch": "tsc -w --preserveWatchOutput"
-    },
-    "dependencies": {
-        "axios": "^0.20.0",
-        "axios-cookiejar-support": "^1.0.0",
-        "express": "^4.17.1",
-        "mongoose": "^5.10.3",
-        "tough-cookie": "^4.0.0"
-    },
-    "devDependencies": {
-        "@types/chai": "^4.2.11",
-        "@types/express": "^4.17.8",
-        "@types/jest": "^26.0.10",
-        "@types/mongoose": "^5.7.36",
-        "@types/node": "^14.0.14",
-        "@types/tough-cookie": "^4.0.0",
-        "@typescript-eslint/eslint-plugin": "^3.9.0",
-        "@typescript-eslint/parser": "^3.9.0",
-        "chai": "^4.2.0",
-        "codecov": "^3.7.0",
-        "eslint": "^7.7.0",
-        "eslint-config-prettier": "^6.11.0",
-        "eslint-plugin-prettier": "^3.1.4",
-        "jest": "^26.4.0",
-        "nodemon": "^2.0.4",
-        "prettier": "^2.1.1",
-        "ts-jest": "^26.3.0",
-        "ts-node": "^8.10.1",
-        "tslib": "^2.0.1",
-        "typescript": "^3.9.6"
-    }
+  "name": "registrum-common",
+  "version": "0.1.0",
+  "private": true,
+  "main": "dist/index.js",
+  "scripts": {
+    "build": "tsc",
+    "lint": "eslint \"**/*.{js,ts}\"",
+    "lint:fix": "npm run lint -- --fix",
+    "start": "exit 0",
+    "test": "jest --silent --passWithNoTests",
+    "watch": "tsc -w --preserveWatchOutput"
+  },
+  "dependencies": {
+    "axios": "^0.20.0",
+    "axios-cookiejar-support": "^1.0.0",
+    "express": "^4.17.1",
+    "husky": "^4.3.0",
+    "mongoose": "^5.10.3",
+    "pretty-quick": "^3.0.0",
+    "tough-cookie": "^4.0.0"
+  },
+  "devDependencies": {
+    "@types/chai": "^4.2.12",
+    "@types/express": "^4.17.8",
+    "@types/jest": "^26.0.13",
+    "@types/mongoose": "^5.7.36",
+    "@types/node": "^14.6.4",
+    "@types/tough-cookie": "^4.0.0",
+    "@typescript-eslint/eslint-plugin": "^4.1.0",
+    "@typescript-eslint/parser": "^4.1.0",
+    "chai": "^4.2.0",
+    "codecov": "^3.7.2",
+    "eslint": "^7.8.1",
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-plugin-prettier": "^3.1.4",
+    "jest": "^26.4.2",
+    "nodemon": "^2.0.4",
+    "prettier": "^2.1.1",
+    "ts-jest": "^26.3.0",
+    "ts-node": "^9.0.0",
+    "tslib": "^2.0.1",
+    "typescript": "^4.0.2"
+  }
 }
