--- a/projects/api/tsconfig.json
+++ b/projects/api/tsconfig.json
@@ -8,7 +8,7 @@
     "sourceMap": true,
     "moduleResolution": "node",
     "declaration": true,
-    "lib": ["es2020"],
+    "lib": ["ES2020", "DOM"],
     "outDir": "dist",
     "baseUrl": "src"
   },
