--- a/projects/banner/package.json
+++ b/projects/banner/package.json
@@ -34,6 +34,7 @@
     "@types/express": "^4.17.8",
     "@types/ioredis": "^4.17.8",
     "@types/jest": "^26.0.13",
+    "@types/mongodb": "^3.5.27",
     "@types/mongoose": "^5.7.36",
     "@types/morgan": "^1.9.1",
     "@types/node": "^14.6.4",
