--- a/projects/banner/package.json
+++ b/projects/banner/package.json
@@ -22,6 +22,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "mongoose": "^5.10.7",
+    "mongodb": "^3.6.2",
     "morgan": "^1.10.0",
     "node-fetch": "^2.6.1",
     "registrum-common": "^0.1.0",
