--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -44,18 +44,19 @@ jobs:
         project: [api, banner, banner-data, client]
     steps:
       - uses: actions/checkout@v2
-      - name: Build and push Docker images
-        uses: docker/build-push-action@v1
+      - name: Login docker registry
+        uses: docker/login-action@v1 
         with:
+          registry: ${{ secrets.REGISTRY_HOST }}
           username: ${{ secrets.REGISTRY_USER }}
           password: ${{ secrets.REGISTRY_PASSWORD }}
-          registry: ${{ secrets.REGISTRY_HOST }}
+      - name: Build and push Docker images
+        uses: docker/build-push-action@v2
+        with:
           repository: ${{ github.repository }}/${{ matrix.project }}
-          build_args: CLIENT_WEBPUSHPUBLIC=${{ secrets.WEBPUSHPUBLIC }}
-          path: .
-          dockerfile: docker/${{ matrix.project }}.Dockerfile
-          add_git_labels: true
-          tag_with_ref: true
+          build-args: CLIENT_WEBPUSHPUBLIC=${{ secrets.WEBPUSHPUBLIC }}
+          context: .
+          file: docker/${{ matrix.project }}.Dockerfile
           push: ${{ (startsWith(github.ref, 'refs/tags/') || (github.ref == 'refs/heads/master') || (github.ref == 'refs/heads/staging')) }}
 
   trigger-hooks:
