--- a/projects/banner-data/package.json
+++ b/projects/banner-data/package.json
@@ -15,36 +15,36 @@
   },
   "dependencies": {
     "argparse": "^2.0.1",
-    "axios": "^0.20.0",
+    "axios": "^0.21.0",
     "axios-cookiejar-support": "^1.0.1",
     "dotenv": "^8.2.0",
-    "mongoose": "^5.10.7",
+    "mongoose": "^5.11.8",
     "node-cron": "^2.0.3",
     "registrum-common": "^0.1.0",
     "tough-cookie": "^4.0.0"
   },
   "devDependencies": {
-    "@types/argparse": "^2.0.0",
+    "@tsconfig/node14": "^1.0.0",
+    "@types/argparse": "^2.0.4",
     "@types/chai": "^4.2.14",
-    "@types/jest": "^26.0.13",
-    "@types/mongoose": "^5.7.36",
-    "@types/node": "^14.6.4",
+    "@types/jest": "^26.0.19",
+    "@types/node": "^14.14.14",
     "@types/node-cron": "^2.0.3",
     "@types/tough-cookie": "^4.0.0",
-    "@typescript-eslint/eslint-plugin": "^4.1.0",
-    "@typescript-eslint/parser": "^4.1.0",
+    "@typescript-eslint/eslint-plugin": "^4.10.0",
+    "@typescript-eslint/parser": "^4.10.0",
     "chai": "^4.2.0",
     "codecov": "^3.8.1",
     "concurrently": "^5.3.0",
-    "eslint": "^7.9.0",
-    "eslint-config-prettier": "^6.15.0",
-    "eslint-plugin-prettier": "^3.1.4",
-    "jest": "^26.4.2",
+    "eslint": "^7.15.0",
+    "eslint-config-prettier": "^7.0.0",
+    "eslint-plugin-prettier": "^3.3.0",
+    "jest": "^26.6.3",
     "nodemon": "^2.0.6",
     "prettier": "^2.2.1",
-    "ts-jest": "^26.4.1",
-    "ts-node": "^9.0.0",
-    "tslib": "^2.0.1",
-    "typescript": "^4.0.3"
+    "ts-jest": "^26.4.4",
+    "ts-node": "^9.1.1",
+    "tslib": "^2.0.3",
+    "typescript": "^4.1.3"
   }
 }
