--- a/package.json
+++ b/package.json
@@ -19,14 +19,16 @@
     ],
     "nohoist": [
       "**/workbox*",
-      "**/workbox*/**"
+      "**/workbox*/**",
+      "**/webpack",
+      "**/webpack/**"
     ]
   },
   "devDependencies": {
     "codecov": "^3.8.1",
-    "husky": "^4.2.5",
+    "husky": "^4.3.6",
     "lerna": "^3.22.1",
     "prettier": "^2.2.1",
-    "pretty-quick": "^3.0.2"
+    "pretty-quick": "^3.1.0"
   }
 }
