--- a/projects/api/package.json
+++ b/projects/api/package.json
@@ -14,8 +14,8 @@
     "watch:ts": "tsc -w --preserveWatchOutput"
   },
   "dependencies": {
-    "@sendgrid/mail": "^7.2.5",
-    "axios": "^0.20.0",
+    "@sendgrid/mail": "^7.4.0",
+    "axios": "^0.21.0",
     "axios-cookiejar-support": "^1.0.1",
     "bcrypt": "^5.0.0",
     "compression": "^1.7.4",
@@ -24,9 +24,9 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
-    "helmet": "^4.1.1",
-    "jest": "^26.4.2",
-    "mongoose": "^5.10.7",
+    "helmet": "^4.2.0",
+    "jest": "^26.6.3",
+    "mongoose": "^5.11.8",
     "morgan": "^1.10.0",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
@@ -35,38 +35,37 @@
     "web-push": "^3.4.4"
   },
   "devDependencies": {
+    "@tsconfig/node14": "^1.0.0",
     "@types/bcrypt": "^3.0.0",
     "@types/chai": "^4.2.14",
     "@types/compression": "^1.7.0",
-    "@types/cors": "^2.8.8",
-    "@types/eslint": "^7.2.2",
-    "@types/express": "^4.17.8",
-    "@types/express-session": "^1.17.0",
+    "@types/cors": "^2.8.9",
+    "@types/eslint": "^7.2.6",
+    "@types/express-session": "^1.17.3",
     "@types/helmet": "^4.0.0",
-    "@types/jest": "^26.0.13",
-    "@types/mongoose": "^5.7.36",
-    "@types/morgan": "^1.9.1",
-    "@types/node": "^14.6.4",
+    "@types/jest": "^26.0.19",
+    "@types/morgan": "^1.9.2",
+    "@types/node": "^14.14.14",
     "@types/passport": "^1.0.4",
     "@types/passport-local": "^1.0.33",
     "@types/supertest": "^2.0.10",
     "@types/tough-cookie": "^4.0.0",
     "@types/web-push": "~3.3.0",
-    "@typescript-eslint/eslint-plugin": "^4.1.0",
-    "@typescript-eslint/parser": "^4.1.0",
+    "@typescript-eslint/eslint-plugin": "^4.10.0",
+    "@typescript-eslint/parser": "^4.10.0",
     "chai": "^4.2.0",
     "codecov": "^3.8.1",
     "concurrently": "^5.3.0",
-    "eslint": "^7.9.0",
-    "eslint-config-prettier": "^6.15.0",
-    "eslint-plugin-prettier": "^3.1.4",
-    "mongodb-memory-server": "^6.7.5",
+    "eslint": "^7.15.0",
+    "eslint-config-prettier": "^7.0.0",
+    "eslint-plugin-prettier": "^3.3.0",
+    "mongodb-memory-server": "^6.9.2",
     "nodemon": "^2.0.6",
     "prettier": "^2.2.1",
-    "supertest": "^5.0.0",
-    "ts-jest": "^26.4.1",
-    "ts-node": "^9.0.0",
-    "tslib": "^2.0.1",
-    "typescript": "^4.0.3"
+    "supertest": "^6.0.1",
+    "ts-jest": "^26.4.4",
+    "ts-node": "^9.1.1",
+    "tslib": "^2.0.3",
+    "typescript": "^4.1.3"
   }
 }
