--- a/projects/banner/package.json
+++ b/projects/banner/package.json
@@ -14,45 +14,44 @@
     "watch:ts": "tsc -w --preserveWatchOutput"
   },
   "dependencies": {
-    "@bmiddha/webhooks": "^1.1.6",
-    "axios": "^0.20.0",
+    "@bmiddha/webhooks": "^1.1.7",
+    "axios": "^0.21.0",
     "axios-cookiejar-support": "^1.0.1",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "mongoose": "^5.10.7",
+    "mongoose": "^5.11.8",
     "morgan": "^1.10.0",
     "node-fetch": "^2.6.1",
     "registrum-common": "^0.1.0",
     "tough-cookie": "^4.0.0"
   },
   "devDependencies": {
+    "@tsconfig/node14": "^1.0.0",
     "@types/chai": "^4.2.14",
     "@types/compression": "^1.7.0",
-    "@types/cors": "^2.8.8",
-    "@types/express": "^4.17.8",
-    "@types/ioredis": "^4.17.8",
-    "@types/jest": "^26.0.13",
-    "@types/mongoose": "^5.7.36",
-    "@types/morgan": "^1.9.1",
-    "@types/node": "^14.6.4",
+    "@types/cors": "^2.8.9",
+    "@types/ioredis": "^4.17.9",
+    "@types/jest": "^26.0.19",
+    "@types/morgan": "^1.9.2",
+    "@types/node": "^14.14.14",
     "@types/node-fetch": "^2.5.7",
     "@types/tough-cookie": "^4.0.0",
-    "@typescript-eslint/eslint-plugin": "^4.1.0",
-    "@typescript-eslint/parser": "^4.1.0",
+    "@typescript-eslint/eslint-plugin": "^4.10.0",
+    "@typescript-eslint/parser": "^4.10.0",
     "chai": "^4.2.0",
     "codecov": "^3.8.1",
     "concurrently": "^5.3.0",
-    "eslint": "^7.9.0",
-    "eslint-config-prettier": "^6.15.0",
-    "eslint-plugin-prettier": "^3.1.4",
-    "ioredis": "^4.17.3",
-    "jest": "^26.4.2",
+    "eslint": "^7.15.0",
+    "eslint-config-prettier": "^7.0.0",
+    "eslint-plugin-prettier": "^3.3.0",
+    "ioredis": "^4.19.4",
+    "jest": "^26.6.3",
     "nodemon": "^2.0.6",
     "prettier": "^2.2.1",
-    "ts-jest": "^26.4.1",
-    "ts-node": "^9.0.0",
-    "typescript": "^4.0.3"
+    "ts-jest": "^26.4.4",
+    "ts-node": "^9.1.1",
+    "typescript": "^4.1.3"
   }
 }
