--- a/projects/client/package.json
+++ b/projects/client/package.json
@@ -11,16 +11,16 @@
     "watch": "npx webpack-dev-server --mode development"
   },
   "dependencies": {
-    "@babel/plugin-transform-runtime": "^7.12.1",
+    "@babel/plugin-transform-runtime": "^7.12.10",
     "@babel/runtime": "^7.12.5",
     "@fluentui/react": "^7.155.0",
-    "@reduxjs/toolkit": "^1.4.0",
-    "@uifabric/react-cards": "^0.112.13",
-    "@uifabric/react-hooks": "^7.13.6",
-    "axios": "^0.20.0",
+    "@reduxjs/toolkit": "^1.5.0",
+    "@uifabric/react-cards": "^0.115.0",
+    "@uifabric/react-hooks": "^7.13.9",
+    "axios": "^0.21.0",
     "react": "^17.0.1",
-    "react-dom": "^16.13.1",
-    "react-redux": "^7.2.1",
+    "react-dom": "^17.0.1",
+    "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
@@ -28,64 +28,53 @@
     "regenerator-runtime": "^0.13.7",
     "registrum-common": "^0.1.0",
     "uniq": "^1.0.1",
-    "workbox-cacheable-response": "^5.1.4",
-    "workbox-core": "^5.1.3",
-    "workbox-expiration": "^5.1.3",
-    "workbox-precaching": "^5.1.3",
-    "workbox-routing": "^5.1.4",
-    "workbox-strategies": "^5.1.3",
-    "workbox-sw": "^5.1.4"
+    "workbox-cacheable-response": "^6.0.2",
+    "workbox-core": "^6.0.2",
+    "workbox-expiration": "^6.0.2",
+    "workbox-precaching": "^6.0.2",
+    "workbox-routing": "^6.0.2",
+    "workbox-strategies": "^6.0.2",
+    "workbox-sw": "^6.0.2"
   },
   "devDependencies": {
-    "@babel/cli": "^7.12.1",
-    "@babel/core": "^7.11.6",
+    "@babel/cli": "^7.12.10",
+    "@babel/core": "^7.12.10",
     "@babel/plugin-proposal-class-properties": "^7.12.1",
-    "@babel/plugin-transform-runtime": "^7.12.1",
-    "@babel/preset-env": "^7.11.5",
-    "@babel/preset-react": "^7.10.4",
-    "@babel/preset-typescript": "^7.10.4",
+    "@babel/plugin-transform-runtime": "^7.12.10",
+    "@babel/preset-env": "^7.12.11",
+    "@babel/preset-react": "^7.12.10",
+    "@babel/preset-typescript": "^7.12.7",
     "@babel/runtime": "^7.12.5",
-    "@types/copy-webpack-plugin": "^6.0.0",
-    "@types/git-revision-webpack-plugin": "^3.0.0",
-    "@types/jest": "^26.0.13",
-    "@types/node": "^14.6.4",
-    "@types/react": "^16.9.49",
+    "@types/jest": "^26.0.19",
+    "@types/node": "^14.14.14",
+    "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
-    "@types/react-redux": "^7.1.9",
-    "@types/react-router-dom": "^5.1.5",
+    "@types/react-redux": "^7.1.12",
+    "@types/react-router-dom": "^5.1.6",
     "@types/uniq": "^0.0.27",
-    "@types/webpack": "^4.41.22",
-    "@types/webpack-dev-server": "^3.11.0",
-    "@types/webpack-env": "^1.15.3",
     "@types/workbox-sw": "^4.3.1",
-    "@types/workbox-webpack-plugin": "^5.1.5",
-    "@typescript-eslint/eslint-plugin": "^4.1.0",
-    "@typescript-eslint/parser": "^4.1.0",
-    "babel-loader": "^8.1.0",
+    "@typescript-eslint/parser": "^4.10.0",
+    "babel-loader": "^8.2.2",
     "clean-webpack-plugin": "^3.0.0",
-    "copy-webpack-plugin": "^6.2.1",
-    "css-loader": "^4.3.0",
-    "dotenv-webpack": "^3.0.0",
-    "eslint-config-prettier": "^6.15.0",
-    "eslint-plugin-prettier": "^3.1.4",
+    "css-loader": "^5.0.1",
+    "dotenv-webpack": "^6.0.0",
+    "eslint-config-prettier": "^7.0.0",
+    "eslint-plugin-prettier": "^3.3.0",
     "eslint-plugin-react": "^7.21.5",
-    "file-loader": "^6.1.1",
+    "file-loader": "^6.2.0",
     "git-revision-webpack-plugin": "^3.0.6",
     "html-webpack-plugin": "^4.5.0",
     "prettier": "^2.2.1",
     "react-svg-loader": "^3.0.3",
-    "style-loader": "^1.3.0",
+    "style-loader": "^2.0.0",
     "svg-inline-loader": "^0.8.2",
-    "ts-node": "^9.0.0",
-    "typescript": "^4.0.3",
+    "terser-webpack-plugin": "^5.0.3",
+    "typescript": "^4.1.3",
     "webpack": "^5.10.3",
-    "webpack-cli": "^3.3.12",
+    "webpack-cli": "^4.2.0",
     "webpack-dev-server": "^3.11.0",
-    "webpack-manifest-plugin": "^2.2.0",
-    "webpack-pwa-manifest": "^4.2.0",
-    "workbox-webpack-plugin": "^5.1.4",
-    "terser-webpack-plugin": "^4.2.0",
-    "@types/terser-webpack-plugin": "^5.0.2",
-    "@types/dotenv-webpack": "^1.8.0"
+    "webpack-manifest-plugin": "^3.0.0",
+    "webpack-pwa-manifest": "^4.3.0",
+    "workbox-webpack-plugin": "^6.0.2"
   }
 }
