--- a/projects/common/package.json
+++ b/projects/common/package.json
@@ -12,34 +12,33 @@
     "watch": "tsc -w --preserveWatchOutput"
   },
   "dependencies": {
-    "axios": "^0.20.0",
+    "axios": "^0.21.0",
     "axios-cookiejar-support": "^1.0.1",
     "express": "^4.17.1",
-    "husky": "^4.3.0",
-    "mongoose": "^5.10.7",
-    "pretty-quick": "^3.0.2",
+    "husky": "^4.3.6",
+    "mongoose": "^5.11.8",
+    "pretty-quick": "^3.1.0",
     "tough-cookie": "^4.0.0"
   },
   "devDependencies": {
+    "@tsconfig/node14": "^1.0.0",
     "@types/chai": "^4.2.14",
-    "@types/express": "^4.17.8",
-    "@types/jest": "^26.0.13",
-    "@types/mongoose": "^5.7.36",
-    "@types/node": "^14.6.4",
+    "@types/jest": "^26.0.19",
+    "@types/node": "^14.14.14",
     "@types/tough-cookie": "^4.0.0",
-    "@typescript-eslint/eslint-plugin": "^4.1.0",
-    "@typescript-eslint/parser": "^4.1.0",
+    "@typescript-eslint/eslint-plugin": "^4.10.0",
+    "@typescript-eslint/parser": "^4.10.0",
     "chai": "^4.2.0",
     "codecov": "^3.8.1",
-    "eslint": "^7.9.0",
-    "eslint-config-prettier": "^6.15.0",
-    "eslint-plugin-prettier": "^3.1.4",
-    "jest": "^26.4.2",
+    "eslint": "^7.15.0",
+    "eslint-config-prettier": "^7.0.0",
+    "eslint-plugin-prettier": "^3.3.0",
+    "jest": "^26.6.3",
     "nodemon": "^2.0.6",
     "prettier": "^2.2.1",
-    "ts-jest": "^26.4.1",
-    "ts-node": "^9.0.0",
-    "tslib": "^2.0.1",
-    "typescript": "^4.0.3"
+    "ts-jest": "^26.4.4",
+    "ts-node": "^9.1.1",
+    "tslib": "^2.0.3",
+    "typescript": "^4.1.3"
   }
 }
