--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,9 +2,12 @@ name: CI
 
 on:
   push:
-  create:
-  release:
+    branches:
+      - main
+    tags:
+      - 'v*.*.*'
   pull_request:
+    branches: main
   workflow_dispatch:
 
 jobs:
@@ -44,6 +47,30 @@ jobs:
         project: [api, banner, banner-data, client]
     steps:
       - uses: actions/checkout@v2
+      - name: Prepare
+        id: prep
+        run: |
+          DOCKER_IMAGE=${{ secrets.REGISTRY_HOST }}/${{ github.repository }}/${{ matrix.project }}
+          VERSION=edge
+          if [[ $GITHUB_REF == refs/tags/* ]]; then
+            VERSION=${GITHUB_REF#refs/tags/v}
+          fi
+          TAGS="${DOCKER_IMAGE}:${VERSION}"
+          if [[ $VERSION =~ ^[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}$ ]]; then
+            TAGS="$TAGS,${DOCKER_IMAGE}:latest"
+          fi
+          echo ::set-output name=tags::${TAGS}
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v1
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
+      - name: Cache Docker layers
+        uses: actions/cache@v2
+        with:
+          path: /tmp/.buildx-cache
+          key: ${{ runner.os }}-buildx-${{ github.sha }}
+          restore-keys: |
+            ${{ runner.os }}-buildx-
       - name: Login docker registry
         uses: docker/login-action@v1
         with:
@@ -53,21 +80,23 @@ jobs:
       - name: Build and push Docker images
         uses: docker/build-push-action@v2
         with:
-          repository: ${{ github.repository }}/${{ matrix.project }}
           build-args: CLIENT_WEBPUSHPUBLIC=${{ secrets.WEBPUSHPUBLIC }}
           context: .
           file: docker/${{ matrix.project }}.Dockerfile
-          push: ${{ (startsWith(github.ref, 'refs/tags/') || (github.ref == 'refs/heads/master') || (github.ref == 'refs/heads/staging')) }}
+          push: ${{ github.event_name != 'pull_request' }}
+          tags: ${{ steps.prep.outputs.tags }}
+          cache-from: type=local,src=/tmp/.buildx-cache
+          cache-to: type=local,dest=/tmp/.buildx-cache
 
   trigger-hooks:
     runs-on: ubuntu-latest
     needs:
       - build-push-docker
     steps:
-      - name: Trigger Hooks - master
-        if: github.ref == 'refs/heads/master'
+      - name: Trigger Hooks - main
+        if: github.ref == 'refs/heads/main'
         run: |
-          curl -X POST -H "Content-Type: application/json" -d "{}" '${{ secrets.MASTER_HOOK }}'
+          curl -X POST -H "Content-Type: application/json" -d "{}" '${{ secrets.main_HOOK }}'
 
       - name: Trigger Hooks - staging
         if: github.ref == 'refs/heads/staging'
