--- a/projects/common/package.json
+++ b/projects/common/package.json
@@ -23,6 +23,7 @@
   "devDependencies": {
     "@tsconfig/node14": "^1.0.0",
     "@types/chai": "^4.2.14",
+    "@types/express": "^4.17.9",
     "@types/jest": "^26.0.19",
     "@types/node": "^14.14.14",
     "@types/tough-cookie": "^4.0.0",
